tests/lean/shadow.lean.expected.out
shadow.lean:4:0: error: type mismatch
  h
has type
  x✝¹=x✝¹
but it is expected to have type
  x=x
failed to synthesize instance
  CoeT (x✝¹=x✝¹) _ (x=x)
shadow.lean:9:0: error: type mismatch
  h
has type
  x=x
but it is expected to have type
  x=x
failed to synthesize instance
  CoeT (x=x) _ (x=x)
